--- a/index.html
+++ b/index.html
@@ -397,9 +397,9 @@
                 </div>
                 <div class="col-lg-4 col-md-6 mb-4 portfolio-item first">
                     <div class="position-relative   overflow-hidden mb-2">
-                        <a href=""> <img class=" img-thumbnail my  mb-2 w-100 portfolio-image " src="img/netflix.jfif" alt=""></a>
+                        <a href="https://rahul-netflex.onrender.com"> <img class=" img-thumbnail my  mb-2 w-100 portfolio-image " src="img/netflix.jfif" alt=""></a>
                     </div>
-                    <h5>Netflix</h5>
+                    <h5 class="btn btn-dark">Netflix</h5>
                     <div>
                         <button type="button" class="btn btn-outline-dark btn-sm rounded-pill m-1 "># Html</button>
                         <button type="button" class="btn btn-outline-dark btn-sm rounded-pill m-1 "># CSS</button>
