--- a/index.html
+++ b/index.html
@@ -382,7 +382,7 @@
                     <div class="position-relative  overflow-hidden mb-2 ">
                         <a href=""> <img class=" img-thumbnail my  mb-2 w-100 portfolio-image  " src="img/youtube.jpeg" alt=""></a>
                     </div>
-                    <h5>YouTube</h5>
+                    <h5 class="btn btn-dark">YouTube</h5>
                     <div>
                         <button type="button" class="btn btn-outline-dark btn-sm rounded-pill m-1 "># Html</button>
                         <button type="button" class="btn btn-outline-dark btn-sm rounded-pill m-1 "># CSS</button>
@@ -418,7 +418,7 @@
                         <a href="https://vigtech.onrender.com
                         "> <img class=" img-thumbnail my  mb-2 w-100  portfolio-image" src="img/marketing.jfif" alt=""></a>
                     </div>
-                    <h5>Digital Marketing</h5>
+                    <h5 class="btn btn-dark">Digital Marketing</h5>
                     <div>
                         <button type="button" class="btn btn-outline-dark btn-sm rounded-pill m-1 "># Html</button>
                         <button type="button" class="btn btn-outline-dark btn-sm rounded-pill m-1 "># CSS</button>
@@ -428,10 +428,9 @@
                 </div>
                 <div class="col-lg-4 col-md-6 mb-4 portfolio-item first">
                     <div class="position-relative   overflow-hidden mb-2">
-                        <a href="https://vigtech.onrender.com
-                        "> <img class=" img-thumbnail my  mb-2 w-100  portfolio-image" src="img/blog-2.jpg" alt=""></a>
+                        <a href="https://rahul-portfolio-0ny2.onrender.com "> <img class=" img-thumbnail my  mb-2 w-100  portfolio-image" src="img/blog-2.jpg" alt=""></a>
                     </div>
-                    <h5>Portfolio</h5>
+                    <h5 class="btn btn-dark">Portfolio</h5>
                     <div>
                         <button type="button" class="btn btn-outline-dark btn-sm rounded-pill m-1 "># Html</button>
                         <button type="button" class="btn btn-outline-dark btn-sm rounded-pill m-1 "># CSS</button>
